# torchprime

./: .dockerignore  .gitignore  README.md  check_tpu_mounted.sh  cleanup_tpu.sh  copy_env.sh  debug.ipynb  debug_sft_data.py  env.example  evaluation_gpu.py  evaluation_gpu.sh  gpu_utils.py  inference_gpu.py  pkill_tpu.sh  pyproject.toml  remote_run.sh  remote_run_base.sh  remote_run_cq.sh  run_ckpt_consolidation.sh  setup_tpu.sh  setup_tpu_cq.sh  test_iterable_sft.py  test_qwen2_import.py  test_segment_ids_attention.py  test_sft_fix.py  trainer.py  visualize_segment_attention.py  z_remote_run.sh
.github/actions/e2e-setup/: action.yml
.github/workflows/: cpu_test.yml  e2e_test.yml  lint.yml  reusable_e2e_check.yml
configs/: run.json
docs/: README.md  metrics.md  sharding.md
docs/contributor/: README.md
e2e_testing/: README.md  check_logs.py  check_profile.py  check_step_time.py  gen_name.py  run_model_forward.py
launcher/: Dockerfile  buildpush.sh  run_xpk.py  run_xpk.sh
llama_training_torchax/: Dockerfile  README.md  run.py  run_xpk.sh
llama_training_xla/: README.md  pyproject.toml  trainer.py
models/: llama.py
recipes/: ckpt_consolidation.sh  debug_memory.sh  evaluation.sh  test.sh  test_data.sh  test_inference.sh  test_llama.sh  test_reloading.sh  test_scheduling.sh  train_qwen2_1.5b_midtrain.sh  train_qwen2_1.5b_midtrain_sanity_check.sh  train_qwen2_pretrain.sh  train_qwen2_pretrain_1024.sh  train_qwen3_0_6b_256.sh  train_qwen3_1.7b.sh  train_qwen3_1.7b_midtrain_allv2.sh  train_qwen3_1.7b_midtrain_llama.sh  train_qwen3_1.7b_midtrain_test.sh  train_qwen3_1.7b_midtrain_v2.sh  train_qwen3_1.7b_midtrain_v2_continue.sh  train_qwen3_1.7b_sft.sh  train_qwen3_1.7b_sft_256core.sh  train_qwen3_1.7b_sft_256core_config.sh  train_qwen3_1.7b_sft_256core_debug.sh  train_qwen3_1.7b_sft_256core_opencoder.sh  train_qwen3_1.7b_sft_mixed.sh  train_qwen3_1.7b_sft_no_flash.sh  train_qwen3_1.7b_sft_test.sh  train_qwen3_1.7b_v2.sh  train_qwen3_1b_512.sh  train_qwen3_1b_sft.sh
src/torchprime/models/: llama.py
stablediffusion2_inference_torchax/: README.md  sdxl.py
tests/: test_llama.py
torchprime/data/: __init__.py  dataset.py
torchprime/experimental/torchax_models/: README.md  custom_mesh.py  run.py  splash_attn.py  train.py
torchprime/experimental/torchax_models/DeepSeek-V3/: convert.py  model.py  prefill_benchmark.py
torchprime/experimental/torchax_models/configs/: default.yaml
torchprime/experimental/torchax_models/deepseek_v3/: fp8_cast_bf16.py  generate.py  model.py  prefill_benchmark.py  requirements.txt
torchprime/experimental/torchax_models/deepseek_v3/tests/: test_prefill.py
torchprime/experimental/torchax_models/llama/: model.py  model_original.py  model_with_collectives.py  model_with_scan.py
torchprime/experimental/torchax_models/test/: test_llama.py
torchprime/experimental/torchax_models/tests/: test_import_torchax.py
torchprime/hf_models/: README.md  train.py
torchprime/hf_models/configs/: default.yaml
torchprime/launcher/: Dockerfile  benchmark_db_util.py  buildpush.py  buildpush.sh  cli.py  doctor.py  run_model.py  test_run_model.py  thunk.py  upload_metrics_to_bq.py  util.py
torchprime/layers/: sequential.py
torchprime/mesh/: custom_mesh.py
torchprime/metrics/: metrics.py  mfu.py  step_duration.py  xplane_pb2.py
torchprime/metrics/tests/: test_mfu.py  test_step_duration.py
torchprime/models/: __init__.py
torchprime/models/transact/: README.md  __init__.py  model_original.py  transact_config.py
torchprime/rope/: rope.py
torchprime/sharding/: shard_model.py
torchprime/sharding/tests/: test_shard_model.py
torchprime/tests/: test_custom_mesh.py  test_metrics.py  test_rope.py
torchprime/torch_xla_models/: MASKING_SCHEDULER_README.md  README.md  SFT_TRAINING_README.md  attention.py  ckpt_consolidation.py  create_test_dataset.py  debug.py  debug_data.py  debug_multiprocess.py  evaluation.py  inference.py  inference_utils.py  loss.py  masking_scheduler.py  model_utils.py  offloading.py  qwen3_inference.py  remat_all.py  results.csv  sanity.py  sanity.sh  sanity_check.py  scan_layers.py  sft_data_collator.py  sft_data_collator_degrade.py  sft_data_collator_ori.py  test_segment_ids_attention.py  topology.py  train.py  train_archive.py  train_degrade.py  train_mid.py  train_mid_debug.py  train_mid_debug_data.py  train_mid_sanitycheck.py  train_mid_test.py  train_mid_test_patched.py  train_mid_test_patched2.py  train_ori.py  train_sanity_check.py
torchprime/torch_xla_models/configs/: base.yaml  default.yaml  default_evaluation.yaml  default_evaluation_gpu.yaml  default_inference.yaml  run.json
torchprime/torch_xla_models/configs/data/: debug.yaml  flex_v2.yaml  gcs_test.yaml  mid_train_dataset.yaml  mid_train_dataset_v2.yaml  mixed_train_dataset.yaml  sft.yaml  sft_mixed.yaml  test_data.yaml  tutu_sft.yaml  validation.yaml  wikitext.yaml
torchprime/torch_xla_models/configs/model/: flex-8b.yaml  flex-qwen-0_6b.yaml  flex-qwen-1b.yaml  flex-qwen-8b.yaml  flex-qwen2-1b.yaml  llama-3-8b.yaml  llama-3.1-405b.yaml  llama-3.1-70b.yaml  llama-3.1-8b.yaml  llama-4-text-only-dummy.yaml  mixtral-8x7b.yaml  qwen-2-1b.yaml  qwen-3-0_6b.yaml  qwen-3-1.7B.yaml  qwen-3-8b.yaml
torchprime/torch_xla_models/experimental/: custom_kernel.py
torchprime/torch_xla_models/experimental/test/: test_splash_attention.py
torchprime/torch_xla_models/flex/: SFT_README.md  __init__.py  attention.py  attention_archive.py  model.py  modeling_llama.py  modeling_qwen.py  modeling_qwen2.py  modeling_qwen2_archive.py  sft_example.py
torchprime/torch_xla_models/llama/: __init__.py  model.py
torchprime/torch_xla_models/llama4/: __init__.py  model.py  model_original.py
torchprime/torch_xla_models/mixtral/: __init__.py  model.py
torchprime/torch_xla_models/qwen/: __init__.py  model.py
torchprime/torch_xla_models/qwen_2_5/: __init__.py  model.py
torchprime/torch_xla_models/tests/: test_llama.py  test_llama4.py  test_mixtral.py  test_offloading.py  test_remat_all.py  test_spmd.py  test_topology.py
torchprime/utils/: retry.py
(+28 files in other folders)
